--- a/src/test/Test.Library/Test.Library.csproj
+++ b/src/test/Test.Library/Test.Library.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -11,5 +11,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0"/>
   </ItemGroup>
-
+  <ItemGroup>
+   <ProjectReference Include="..\..\Library\Library.csproj" />
+  </ItemGroup>
 </Project>
+
